--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,22 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx4G
-org.gradle.daemon=false
-org.gradle.debug=false
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
 # Read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-neogradle.subsystems.parchment.minecraftVersion=1.20.6
-neogradle.subsystems.parchment.mappingsVersion=2024.06.02
+parchment_minecraft_version=1.21
+parchment_mappings_version=2024.07.28
 
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.21)
-neo_version=20.6.116
-neo_version_range=[20.6,)
-loader_version_range=[2,)
+minecraft_version=1.21.1
+minecraft_version_range=[1.21.1,1.21.2)
+neo_version=21.1.5
+neo_version_range=[21.1.0,)
+loader_version_range=[4,)
 
 ## Mod Properties
 mod_id=imgui
